--- a/dillo/src/themes/dillo/styles/plugins/_cd-dropdown.sass
+++ b/dillo/src/themes/dillo/styles/plugins/_cd-dropdown.sass
@@ -24,7 +24,7 @@
 	cursor: pointer
 	font-family: $font_headings
 	border: thin solid darken($color_background, 3%)
-	+border-radius(3px)
+	border-radius: 3px
 	+box-shadow(1px, 2px, 2px, darken($color_background, 5%), 1.0)
 	+media-xs
 		width: auto
@@ -63,7 +63,7 @@
 	display: block
 	cursor: pointer
 	border: thin solid transparent
-	+border-radius(3px)
+	border-radius: 3px
 
 .cd-dropdown > span,
 .cd-dropdown ul li span
