--- a/dillo/src/themes/dillo/styles/plugins/_ckeditor.sass
+++ b/dillo/src/themes/dillo/styles/plugins/_ckeditor.sass
@@ -6,28 +6,28 @@
 .cke_panel
 	border: thin solid lighten($color_background, 2%)
 	font-family: $font_body !important
-	+box-shadow-none
+	box-shadow: none !important
 
 .cke_combopanel
 	border: thin solid lighten($color_background, 2%)
 	font-family: $font_body !important
-	+box-shadow-none
+	box-shadow: none !important
 	& body
 		font-family: $font_body !important
 
 .cke_panel_listItem.cke_selected a
 	font-family: $font_body !important
-	+box-shadow-none
+	box-shadow: none !important
 
 
 .cke_combo_button
-	+box-shadow-none
+	box-shadow: none !important
 	border: none !important
 	background-image: none !important
 	background-color: transparent !important
 
 .cke_combo_off a.cke_combo_button:active, .cke_combo_on a.cke_combo_button
-	+box-shadow-none
+	box-shadow: none !important
 	background-color: $color_background !important
 
 .cke_chrome
@@ -37,7 +37,7 @@
 	border: thin solid lighten($color_text, 60%) !important
 	background-color: lighten($color_background, 3%) !important
 	margin: 0 !important
-	+border-radius(3px)
+	border-radius: 3px
 
 iframe.cke_wysiwyg_frame.cke_reset,
 body.cke_editable.cke_editable_themed.cke_contents_ltr
@@ -53,7 +53,7 @@ span.cke_top, .cke_top
 	background-image: none !important
 	background-color: transparent !important
 	resize: none
-	+box-shadow-none
+	box-shadow: none !important
 
 span.cke_toolgroup
 	border: none
@@ -66,7 +66,7 @@ span.cke_toolgroup
 
 a.cke_button_off
 	border-bottom: 2px solid transparent !important
-	+box-shadow-none
+	box-shadow: none !important
 
 a.cke_button_off:hover, a.cke_button_off:focus, a.cke_button_off:active,
 a.cke_button_disabled:hover, a.cke_button_disabled:focus, a.cke_button_disabled:active
@@ -80,7 +80,7 @@ a.cke_button_on, a.cke_button_on:hover, a.cke_button_on:focus, a.cke_button_on:a
 	background-color: transparent !important
 	border-bottom: 2px solid $color_brand_secondary !important
 	color: white !important
-	+box-shadow-none
+	box-shadow: none !important
 
 .cke_dialog_contents_body
 	height: auto !important
@@ -99,7 +99,7 @@ input.cke_dialog_ui_input_password,
 textarea.cke_dialog_ui_input_textarea
 	border: 2px solid darken($color_background, 6%) !important
 	background-color: darken($color_background, 4%) !important
-	+border-radius(3px)
+	border-radius: 3px
 	+box-shadow(2px, 2px, 0, black, .1)
 	&:focus
 		border-color: $color_brand_main
@@ -113,7 +113,7 @@ textarea.cke_dialog_ui_input_textarea
 	width: 100% !important
 	overflow: hidden !important
 	overflow-y: scroll
-	+border-radius(3px)
+	border-radius: 3px
 	+box-shadow(2px, 2px, 0, black, .1)
 	& img
 		max-width: 100% !important
@@ -130,7 +130,7 @@ a.cke_dialog_ui_button, a.cke_dialog_ui_button_ok
 	border: thin solid lighten($color_text, 65%) !important
 	border-bottom: 1px solid lighten($color_text, 58%) !important
 	padding: 4px 0 !important
-	+border-radius(3px)
+	border-radius: 3px
 
 a.cke_dialog_ui_button:hover, a.cke_dialog_ui_button_ok:hover
 	background: lighten($color_text, 70%) !important
