Style: Overflow categories with long names in dropdown

--- a/dillo/src/themes/dillo/styles/main.sass
+++ b/dillo/src/themes/dillo/styles/main.sass
@@ -2190,7 +2190,7 @@ fieldset
 		font-size: 1.5em
 		font-weight: lighter
 		margin: 0
-		padding: 10px 0 0 0
+		padding: 10px 3px 0 3px
 		color: $color_brand_main
 		position: relative
 		user-select: none
