--- a/dillo/src/themes/dillo/templates/settings/profile.jade
+++ b/dillo/src/themes/dillo/templates/settings/profile.jade
@@ -88,7 +88,7 @@
 								br
 								| {% endif %}
 								| {% if current_user.has_role('bfct_trainer') %}
-								i.fa fa-graduation-cap
+								i.fa.fa-graduation-cap
 								| Blender Foundation Certified Trainer
 								| {% endif %}
 								| {% else %}
