--- a/dillo/src/themes/dillo/templates/posts/view.jade
+++ b/dillo/src/themes/dillo/templates/posts/view.jade
@@ -126,8 +126,8 @@ link(href="https://cdnjs.cloudflare.com/ajax/libs/jquery.swipebox/1.3.0.2/css/sw
 			| {% endif %}
 
 			| {% else %}
-			#post-content.post-view-content.
-				{{post.content|safe}}
+			#post-content.post-view-content(class="{{post.post_type.url}}")
+				| {{post.content|safe}}
 
 			| {% endif %}
 
@@ -502,21 +502,18 @@ link(href="https://cdnjs.cloudflare.com/ajax/libs/jquery.swipebox/1.3.0.2/css/sw
 script(type="text/javascript").
 
 	/* Convert markdown on comments  */
-	$( ".post-view-comments-item-text" ).each(function(i) {
-		var text = $(this).text();
+	$(".post-view-comments-item-text, #post-content.text:first").each(function(i) {
+		var text = $(this).text().trim();
 		$(this).html(convert(text));
 	});
-
-	//- var postContent = $(".post-view-content").html();
-	//- $(".post-view-content").html(convert(postContent));
 
 	{% if current_user.is_authenticated() %}
 
 		/* Build the markdown preview when typing in textarea */
 		$(function() {
-			var $textarea = $('.comment-reply-field'),
-					$container = $('.comment-form-container'),
-					$preview = $('.comment-reply-preview');
+			var $textarea = $('.comment-reply-field:first, .comment-edit-field:first'),
+					$container = $('.comment-form-container:first'),
+					$preview = $('.comment-reply-preview:first');
 
 			// As we type in the textarea
 			$textarea.keyup(function() {
@@ -544,41 +541,6 @@ script(type="text/javascript").
 
 			}).trigger('keyup');
 		});
-
-		/* Build the markdown preview when typing in textarea */
-		$(function() {
-			var $textarea = $('.comment-edit-field'),
-					$container = $('.comment-form-container'),
-					$preview = $('.comment-reply-preview');
-
-			// As we type in the textarea
-			$textarea.keyup(function(e) {
-				console.log(e);
-
-				// Convert markdown
-				$preview.html(convert($textarea.val()));
-
-				// While we are at it, style when empty
-				if ($textarea.val()) {
-					$container.addClass('filled');
-					$preview.show();
-				} else {
-					$container.removeClass('filled');
-					$preview.hide();
-				};
-
-				// Send on ctrl+enter
-				if ((event.keyCode == 10 || event.keyCode == 13) && event.ctrlKey){
-					$("#form-comment").submit();
-				};
-
-				// Grow as we type
-				field = document.getElementById('post_comment');
-				field.style.height = (field.scrollHeight) + "px";
-
-			}).trigger('keyup');
-		});
-
 
 		function cancelComment(){
 			$('.post-view-comments-submit').removeAttr('parent_id').removeClass('is_reply');
