Move submit form to own AJAX callable entry point
This significantly reduces system load and allows for easier role
checks before display of categories.

--- a/dillo/src/themes/dillo/templates/layout.jade
+++ b/dillo/src/themes/dillo/templates/layout.jade
@@ -74,7 +74,8 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
 		div#submit.dialog
 			.dialog__overlay
 			.dialog__content
-				| {% include 'posts/form.html' %}
+				//- | {% include 'posts/form.html' %}
+				#submit-form
 				button.action.dialog__button-close(data-dialog-close)
 					i.di-cancel
 
